--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "wpackagist-theme/twentytwentytwo": "^1.2",
     "pantheon-systems/wordpress-bedrock-integrations": "^2.1",
     "pantheon-systems/pantheon-mu-plugin": "^1.0",
-    "pantheon-systems/composer-scaffold": "^1.0"
+    "pantheon-systems/composer-scaffold": "^1.0",
+    "pantheon-systems/decoupled-wordpress-recommended": "^1.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.2",
